--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light" id = 'navbar'>
         <div class="container-fluid">
-           <button id = 'navbar-heading'> FGC</button>
+           <a id = 'navbar-heading' href="/src"> FGC</a>
            
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -25,7 +25,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a  id = 'third-navbar' href="/FeedBack" tabindex="-1" aria-disabled="true">Feedback</a>
+                <a  id = 'third-navbar' href="/FeedBack">Feedback</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -61,6 +61,7 @@
           </form>
         <button id = 'calculate-button'>Calculate</button>
     </div>
+   
  
     
 </div>
